# metriclens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTERVIEW_DEFENSE.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: ecommerce_demo.csv
examples/: ecommerce_demo.py  generate_demo_data.py
outputs/: cvr_rca.html  cvr_rca.json  cvr_rca.md  revenue_rca.html  revenue_rca.json  revenue_rca.md
src/metriclens/: __init__.py  core.py  decomposition.py  exceptions.py  metrics.py  profiler.py  report.py
src/metriclens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_decomposition.py  test_metrics.py  test_profiler_report_demo.py
