[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metriclens"
version = "0.1.0"
description = "DataFrame-native metric movement decomposition for business metrics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sidharth Kriplani"}]
keywords = ["analytics", "metrics", "decomposition", "product-analytics", "pandas"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/SidharthKriplani/metriclens"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]
